--- a/src/components/PageContainer/styles.css
+++ b/src/components/PageContainer/styles.css
@@ -1,4 +1,12 @@
 .pageContainer {
   background-color: #f5f8fb;
-  margin: 20px;
+  padding: 20px;
+  height: 100%;
+}
+
+@media only screen and (min-width: 1920px) {
+  .pageContainer {
+    max-width: 1600px;
+    margin-inline: auto;
+  }
 }
