--- a/src/components/PersonalInfoWidget/styles.css
+++ b/src/components/PersonalInfoWidget/styles.css
@@ -4,7 +4,6 @@
   margin: 5px;
   display: block;
   height: auto;
-  width: 100%;
   background: #ffffff;
   padding: 2rem;
   -webkit-box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%),
